RESOLVED FIXED190915
[PSON] Navigating cross-site with locked history but unlocked back/forward list fails to create a new BackForwardListItem
https://bugs.webkit.org/show_bug.cgi?id=190915
Summary [PSON] Navigating cross-site with locked history but unlocked back/forward li...
Chris Dumez
Reported 2018-10-25 13:19:19 PDT
Navigating cross-site with locked history but unlocked back/forward list fails to create a new BackForwardListItem and updates the current one instead.
Attachments
Patch (11.42 KB, patch)
2018-10-25 13:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-25 13:19:36 PDT
Chris Dumez
Comment 2 2018-10-25 13:35:12 PDT
EWS Watchlist
Comment 3 2018-10-25 13:37:55 PDT
Attachment 353103 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:283: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:304: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:306: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:313: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4 2018-10-25 21:41:21 PDT
Comment on attachment 353103 [details] Patch r=me
WebKit Commit Bot
Comment 5 2018-10-25 22:06:34 PDT
Comment on attachment 353103 [details] Patch Clearing flags on attachment: 353103 Committed r237446: <https://trac.webkit.org/changeset/237446>
WebKit Commit Bot
Comment 6 2018-10-25 22:06:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.